# queuerious_detector

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: X_test_tfidf.joblib  X_val_tfidf.joblib  test_tickets.csv  val_tickets.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: label_encoder.joblib  logreg.joblib  logreg_tfidf_tuned.pkl  scaler.joblib  tfidf.joblib  xgb.joblib
notebooks/: 0.01-da-data-source-1-investigation.ipynb  0.01-da-data-source-investigation.ipynb  0.02-da-exploration-notebook.ipynb  0.03-da-exploration-notebook.ipynb  0.03-da-proof-of-concept.ipynb  0.04-da-combine_function.ipynb  0.04-da-develop-functions.ipynb  1.01-lg-tfidf.ipynb  1.02-da-rfc-sbert.ipynb  1.02-rfc-sbert.ipynb  1.03-svm-sbert.ipynb  1.04-xgb-sbert.ipynb  2.01-compare-models-deepdive.ipynb  3.01-see-SVC-in-action.ipynb
queuerious_detector/: __init__.py  config.py  dataset.py  features.py  interpret.py  leak_prevent.py  plots.py  preprocessing.py  visuals_eda.py
queuerious_detector/modeling/: predict.py  train.py
reports/: logreg_classification_report.txt  rf_classification_report.txt  svm_classification_report.txt  xgb_classification_report.txt
