[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "queuerious_detector"
version = "0.0.1"
description = "Predict support queue based on customer complaint."
authors = [
  { name = "Damond Allen"},
  { name = "Alyna Petrov" }
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10,<3.14"


[tool.ruff]
line-length = 99
src = ["queuerious_detector"]
include = ["pyproject.toml", "queuerious_detector/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["queuerious_detector"]
force-sort-within-sections = true

